<resources>
    <string name="app_name">MeetingScheduler</string>
    <string name="action_prev">prev</string>
    <string name="action_back">back</string>
    <string name="action_next">next</string>
    <string name="schedule_company_meeting">schedule company meeting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">%1$s - %2$s</string>
    <string name="no_scheduled_meeting">No Scheduled meeting</string>
    <string name="schedule_a_meeting">Schedule a Meeting</string>
    <string name="submit">SUBMIT</string>
    <string name="description">Description</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
</resources>
