<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable name="scheduleViewModel" type="com.stunnningcoder.meetingscheduler.MeetingViewModel"/>
    </data>


        <androidx.constraintlayout.widget.ConstraintLayout
                android:background="#fff"
                xmlns:android="http://schemas.android.com/apk/res/android"
                                                           xmlns:tools="http://schemas.android.com/tools"
                                                           xmlns:app="http://schemas.android.com/apk/res-auto"
                                                           android:layout_width="match_parent"
                                                           android:layout_height="match_parent"
                                                           tools:context=".ScheduleMeetingFragment">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/actionBack"/>

            <TextView
                    android:id="@+id/actionBack"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/action_back"
                    android:textColor="#fff"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:padding="16dp"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constrainedWidth="true"
                    android:text="@string/schedule_a_meeting"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:textColor="#fff"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/meeting_date"
                    android:textStyle="bold"
                    android:id="@+id/actionMeetingDate"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    app:layout_constraintTop_toBottomOf="@id/actionBack"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/bg_button"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:drawableRight="@android:drawable/arrow_down_float"/>

            <TextView
                    android:id="@+id/actionStartTime"
                    android:text="@string/start_time"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/actionMeetingDate"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/bg_button"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:drawableRight="@android:drawable/arrow_down_float"/>
            <TextView
                    android:text="@string/end_time"
                    android:id="@+id/actionEndTime"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/actionStartTime"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/bg_button"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:drawableRight="@android:drawable/arrow_down_float"/>


            <EditText
                    android:inputType="none"
                    android:hint="@string/description"
                    android:background="@drawable/bg_desc"
                    android:padding="16dp"
                    android:gravity="top"
                    android:id="@+id/textDesc"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:minLines="5"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@id/actionEndTime"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent" android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/actionSubmit"
                    app:layout_constraintTop_toBottomOf="@id/textDesc"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="36dp"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="24dp"
                    android:text="@string/submit"
                    android:background="@color/colorPrimary"
                    android:padding="16dp"
                    android:layout_width="match_parent" android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>