<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable name="meetingViewModel" type="com.stunnningcoder.meetingscheduler.MeetingViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContainer"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/textCurrentDate"/>

        <TextView
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/textCurrentDate"
                app:layout_constraintLeft_toRightOf="@id/actionPrev"
                android:textSize="15sp"
                android:textColor="#fff"
                app:layout_constrainedWidth="true"
                android:padding="16dp"
                app:layout_constraintRight_toLeftOf="@id/actionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/actionPrev"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/textCurrentDate"
                android:text="@string/action_prev"
                android:onClick="@{()-> meetingViewModel.getData(meetingViewModel.daysFromCurrent.decrementAndGet())}"
                android:textColor="#fff"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:padding="16dp"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/actionNext"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/textCurrentDate"
                android:text="@string/action_next"
                android:onClick="@{()-> meetingViewModel.getData(meetingViewModel.daysFromCurrent.incrementAndGet())}"
                android:textColor="#fff"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:padding="16dp"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>

        <FrameLayout
                android:id="@+id/fragmentContainer"
                app:layout_constraintTop_toBottomOf="@id/textCurrentDate"
                app:layout_constraintBottom_toTopOf="@id/actionSchedule"
                android:layout_width="match_parent" android:layout_height="0dp"/>


        <TextView
                android:textSize="16sp"
                android:gravity="center"
                android:padding="16dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:id="@+id/actionSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/schedule_company_meeting"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="#fff"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>